# LandingForm

./: .env  .env.local  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: build.yml  deployment.yml
Docker/: postgres.dockerfile  rust.dockerfile
Kubernetes/: landing-form-secret.yaml  landing-form.yaml  load-balancer.yaml  postgres-secret.yaml  postgres.yaml
bash/mac/: create_and_run_postgres.sh
database_init/: init.sql
frontend/: index.html
frontend/CSS/: layout.css
frontend/HTML/: already_subscribed.html  subscribed.html
monitoring/grafana/data/: grafana.db
monitoring/grafana/provisioning/dashboards/: rust-app.json
monitoring/prometheus/: prometheus.yml
src/: lib.rs  main.rs  models.rs  schema.rs
src/custom_middleware/: auth_guard.rs  metrics_collector.rs
src/middleware/: auth_guard.rs  metrics_collector.rs  mod.rs
src/routes/: dispatch_email.rs  index.rs  insert.rs  login.rs  mod.rs  register.rs  verify.rs
src/routes/auth/: auth_controller.rs  auth_service.rs  login.rs  mod.rs  register.rs
src/routes/auth/auth_dto/: login_dto.rs  mod.rs  register_dto.rs  token_dto.rs
src/routes/auth/dto/: login_dto.rs  register_dto.rs
src/routes/auth/features/: mod.rs
src/routes/auth/features/avatar_file/: avatar_file_model.rs  mod.rs
src/routes/auth/features/email_verification/: email_verification_model.rs  mod.rs
src/routes/peer_conn/: mod.rs
src/routes/peer_conn/features/: mod.rs
src/utils/: app_error.rs  database_functions.rs  jwt.rs  lazy_static.rs  mod.rs  responses.rs  security.rs
(+10 files in other folders)
