[package]
name = "landing_form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
axum = { version = "0.6.18", features = ["headers"] }
base64 = "0.21.2"
chrono = "0.4.26"
diesel = { version = "2.0.4", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
lettre = "0.10.4"
prometheus = { version = "0.13.3", features = ["process"] }
regex = "1.8.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

[[bin]]
name = "landing_form"
path = "src/main.rs"

[dev-dependencies]
hyper = { version = "0.14.26", features = ["client"] }
tower = "0.4.13"
urlencoding = "2.1.2"
